crates/lyra-tests/tests/snapshots/corpus__lrm__25__25.10__interface_objects__restricted_method.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type[38]] 11:22..11:22: member `hidden_fn` is not accessible through this modport
---
unit (0 diagnostics)
