crates/lyra-tests/tests/snapshots/corpus__lrm__25__25.10__interface_objects__restricted_variable.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.type.member_not_in_modport] 11:27..11:27: member `secret` is not accessible through this modport
---
unit (0 diagnostics)
